# illegal_pack_ws

./: chao_rviz2.rviz  frames_2026-01-13_10.03.05.gv  frames_2026-03-20_16.25.32.gv  realsense_yolo.py  run_detection.sh  run_map.sh  run_patrol.sh  run_try.sh  run_tts.sh  start_patrol_system.sh  start_with_tmux.sh  流程.txt
src/: fishbot_navigator.tar.xz
src/cpp_yolo_realsense/: CMakeLists.txt  package.xml
src/cpp_yolo_realsense/include/: tracker.hpp  yolo_trt.hpp
src/cpp_yolo_realsense/src/: rs_yolo_node.cpp
src/fishbot_navigator/: package.xml  setup.cfg  setup.py
src/fishbot_navigator/fishbot_navigator/: multi_goal_nav.py  patrol_and_detect.py  single_goal_nav.py
src/realsense3d_detection/: package.xml  setup.cfg  setup.py
src/realsense3d_detection/launch/: map.launch.py  tf_tree_sim.launch.py
src/realsense3d_detection/realsense3d_detection/: coordtansformer_node.py  detection_node copy.py  detection_node.py  simple_map_node.py  try2_node.py
src/realsense3d_detection/urdf/: go2_camera.urdf  scans_t12.yaml
weight/: detection_params.yaml  patrol_params.yaml
