<package format="3">
  <name>cpp_yolo_realsense</name>
  <version>0.0.0</version>
  <description>YOLO TensorRT 3D Detection</description>
  <maintainer email="user@todo.todo">agx</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>message_filters</depend>
  <depend>libopencv-dev</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>